Fix offset scrollbar for real this time

--- a/src/app.css
+++ b/src/app.css
@@ -78,6 +78,7 @@ body {
   place-items: center;
   height: 100vh;
   overflow-x: hidden;
+  width: 100vw;
 }
 
 h1 {
@@ -96,6 +97,7 @@ h1 {
   flex-direction: column;
   height: 100%;
   overflow-x: hidden;
+  width: 100vw;
 }
 
 button {
